vlib/v/checker/tests/string_escape_u_err_b.out
vlib/v/checker/tests/string_escape_u_err_b.vv:2:15: error: `\u` incomplete universal character name
    1 | fn main() {
    2 |     println('\u345')
      |               ^
    3 | }
